Tut08/src/examples/tut08/bad/Hub.java
package examples.tut08.bad;

public class Hub extends BicycleComponent {

	public Hub(float cost, float weight) {
		super(cost, weight);
	}
}
